Use java.nio.file instead of java.io (#53)
* Use java.nio.file instead of java.io

* Remove deprecated methods